# nyc-mayor-analysis

./: .env  .env.example  .gitignore  README.md  docker-compose.yml  env.example  package.json
apps/py-analytics/: .dockerignore  Dockerfile  pyproject.toml
apps/py-analytics/py_analytics/: main.py
apps/py-analytics/py_analytics/routers/: geo.py
apps/web/: Dockerfile  package.json  pnpm-lock.yaml
apps/web/app/api/geo/sample/: route.ts
apps/web/app/dashboard/map/: MapView.tsx  page.tsx
apps/web/app/dashboard/test-api/: page.tsx
apps/web/lib/map/: deckLayers.ts  pmtiles.ts
election-analysis/: package.json
